2006-12-19  Andrew Cagney  <cagney@redhat.com>

	* test/dogtail_scripts/frysk_suite.in (frysk, funitChild, src):
	Conditionally set configuration variables.

2006-12-18  Andrew Cagney  <cagney@redhat.com>

	* test/TestGlade.java: Note broken, 3749.

2006-12-16  Adam Jocksch  <ajocksch@redhat.com>

	* DebugHistory.java: Events are now kept using a LinkedList instead of
	a Vector.
	* SessionManagerGui.java (popupControl): Is now a LinkedList.

2006-12-13  Rick Moseley  <rmoseley@redhat.com>

	* test/TestParser.java: Use ArrayList instead of String[].

2006-12-13  Mike Cvet  <mcvet@redhat.com>

	* disassembler/DisassemblyWindow.java (handleToSpin): Fixed some
	scrolling weirdness which searching higher memory addresses.

2006-12-12  Stepan Kasal  <skasal@redhat.com>

	* test/dogtail_scripts/Test2921.xml: s/pkglibexecdir/pkglibdir/
	* test/dogtail_scripts/funit_new_session.xml: Ditto.
	* test/dogtail_scripts/another_new_session.xml: Ditto.
	* test/dogtail_scripts/frysk_suite.in: Ditto.

2006-12-11  Andrew Cagney  <cagney@redhat.com>

	* test/dogtail_scripts/.cvsignore: Cite bug 3227.

2006-12-07  Andrew Cagney  <cagney@redhat.com>

	* test/GuiTestLib.java: For auto-generated method stub, throw
	exception.

2006-12-06  Andrew Cagney  <cagney@redhat.com>

	* register/RegisterWindow.java: Remove @author.
	* disassembler/DisassemblyFormatDialog.java: Ditto.
	* disassembler/DisassemblyWindow.java: Ditto.
	* memory/MemoryFormatDialog.java: Ditto.
	* memory/MemoryWindow.java: Ditto.
	* Gui.java: Ditto.

	* test/TestWindowFactorization.java: Add copyright.
	* DebugHistory.java: Ditto.
	* DummyDebugResults.java: Ditto.
	* DummySourceWindow.java: Ditto.

2006-12-06  Mike Cvet  <mcvet@redhat.com>

	* memory/MemoryWindow.java: Removed @authors tag.
	* memory/MemoryWindowFactory.java: Ditto.
	* sessions/ProcessPicker.java: Ditto.
	* disassembler/DisassemblyWindow.java: Ditto.
	* disassembler/DisassemblyWindowFactory.java: Ditto.
	* register/RegisterWindowFactory.java: Ditto.