@@ -1,3 +1,12 @@
+2006-12-27  Mike Cvet  <mcvet@redhat.com>
+
+	* memory/MemoryWindow.java (setTask): Set default number of 
+	memory rows to 50.
+	(resetTask): Ditto.
+	* disassembler/DisassemblyWindow.java (setTask): Set default number
+	of instruction rows to 50.
+	(resetTask): Ditto.
+
 2006-12-19  Andrew Cagney  <cagney@redhat.com>
 
 	* test/dogtail_scripts/frysk_suite.in (frysk, funitChild, src):
